--- a/index.html
+++ b/index.html
@@ -1,31 +1,20 @@
 <!DOCTYPE html>
 <html>
-<title>RingBins</title>
+<title>ringbins</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/png" href="favicon.png"/>
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<style>
-body,h1 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
-.bgimg {
-  background-image: url('bg2.png');
-  min-height: 100%;
-  background-position: center;
-  background-size: cover;
-}
-</style>
+<link rel="stylesheet" href="style.css">
 <body>
 
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-  <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    RingBins
+<div id="container">
+  <div id="title">
+    ringbins
   </div>
-  <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center"></p>
+  <div class="middle text-center">
+    <img class="animatetop" src="img/bin.png" height="160px" alt="bin">
+    <h1 class="jumbo animatetop">COMING SOON</h1>
   </div>
 </div>
 
