--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     ringbins
   </div>
   <div class="middle text-center">
-    <img class="animatetop" src="img/bin.png" height="160px" alt="bin">
+    <img class="animatetop zoom" src="img/bin.png" height="160px" alt="bin">
     <h1 class="jumbo animatetop">COMING SOON</h1>
   </div>
 </div>
